# SPRINT

./: .gitignore  Dockerfile  README.md  app.py  db.py  experiment.py  requirements.txt
experiment/: .gitignore  prunned.csv  rq1.py  rq2.py  rq2_compute.py  rq2_plot.py  rq3.py  time.csv
scripts/: bug.py  config.py  d4j.benchmarks.lst  d4j.py  d4j1.lst  d4j2.lst  d4j_bug_positions.py  gzoltar.py  ochiai.py  parse_lst.py  pretty_csv.py  sf.all.lst  sf.lst  sprint.py  target.lst  tracer.py  utils.py  validator.py  validator_all.py
sprint/: utils.py
sprint/checklist/: package.json
sprint/checklist/public/: index.html
sprint/checklist/src/: App.css  App.js  ChecklistPage.js  index.js
sprint/resources/: prompt.toml
sprint/scripts/: batch.py  common.py  convert_to_concrete.py  export_sprint_format.py  figure.py  register_abstract_patches.py  sequential.py  synthesis.py  tokens.py
sprint/tgi/: config_box.py  data.py  dependencies.py  inference.py  initializer.py  models.py  prompts.py  utils.py
sprint/tgi/db/: database.py
sprint/tgi/routers/: batch_router.py  session_router.py
tool/components/: .gitignore  pom.xml  synthesizer.py
tool/components/synthesizer/: abspatch.py  drivers.py  llm.py  status.py  template.py
tool/components/synthesizer/alpha_repair/: templates.py
tool/components/synthesizer/bert_only/: templates.py
tool/components/tracer/: pom.xml
tool/components/verifier/: README.md  pom.xml
tool/resources/: chat_repair.lst  d4c.lst  d4j1_with_ochiai.lst  d4j2_with_ochiai.lst  iter.lst  sprint_pldi.lst  tare.lst  tbar.lst
tool/resources/ChatRepair_patches/: Chart_10.diff  Chart_11.diff  Chart_12.diff  Chart_13.diff  Chart_17.diff  Chart_20.diff  Chart_24.diff  Chart_26.diff  Chart_4.diff  Chart_5.diff  Chart_6.diff  Chart_8.diff  Chart_9.diff  Cli_11.diff  Cli_40.diff  Cli_8.diff  Closure_10.diff  Closure_101.diff  Closure_102.diff  Closure_104.diff  Closure_11.diff  Closure_119.diff  Closure_124.diff  Closure_125.diff  Closure_126.diff  Closure_128.diff  Closure_13.diff  Closure_15.diff  Closure_18.diff  Closure_19.diff  Closure_2.diff  Closure_20.diff  Closure_31.diff  Closure_33.diff  Closure_36.diff  Closure_38.diff  Closure_44.diff  Closure_5.diff  Closure_52.diff  Closure_56.diff  (+107 more)
tool/resources/Developer_patches/: Chart_1.diff  Chart_10.diff  Chart_11.diff  Chart_12.diff  Chart_13.diff  Chart_14.diff  Chart_15.diff  Chart_16.diff  Chart_17.diff  Chart_18.diff  Chart_19.diff  Chart_2.diff  Chart_20.diff  Chart_21.diff  Chart_22.diff  Chart_23.diff  Chart_24.diff  Chart_25.diff  Chart_26.diff  Chart_3.diff  Chart_4.diff  Chart_5.diff  Chart_6.diff  Chart_7.diff  Chart_8.diff  Chart_9.diff  Cli_1.diff  Cli_10.diff  Cli_11.diff  Cli_12.diff  Cli_13.diff  Cli_14.diff  Cli_15.diff  Cli_16.diff  Cli_17.diff  Cli_18.diff  Cli_19.diff  Cli_2.diff  Cli_20.diff  Cli_21.diff  (+637 more)
tool/resources/ochiai/Chart_1/: ochiai.txt
tool/resources/ochiai/Chart_10/: ochiai.txt
tool/resources/ochiai/Chart_11/: ochiai.txt
tool/resources/ochiai/Chart_12/: ochiai.txt
tool/resources/ochiai/Chart_13/: ochiai.txt
tool/resources/ochiai/Chart_14/: ochiai.txt
tool/resources/ochiai/Chart_15/: ochiai.txt
tool/resources/ochiai/Chart_16/: ochiai.txt
tool/resources/ochiai/Chart_17/: ochiai.txt
tool/resources/ochiai/Chart_18/: ochiai.txt
tool/resources/ochiai/Chart_19/: ochiai.txt
tool/resources/ochiai/Chart_2/: ochiai.txt
tool/resources/ochiai/Chart_20/: ochiai.txt
tool/resources/ochiai/Chart_21/: ochiai.txt
tool/resources/ochiai/Chart_22/: ochiai.txt
tool/resources/ochiai/Chart_23/: ochiai.txt
tool/resources/ochiai/Chart_24/: ochiai.txt
tool/resources/ochiai/Chart_25/: ochiai.txt
tool/resources/ochiai/Chart_26/: ochiai.txt
tool/resources/ochiai/Chart_3/: ochiai.txt
tool/resources/ochiai/Chart_4/: ochiai.txt
tool/resources/ochiai/Chart_5/: ochiai.txt
tool/resources/ochiai/Chart_6/: ochiai.txt
tool/resources/ochiai/Chart_7/: ochiai.txt
tool/resources/ochiai/Chart_8/: ochiai.txt
tool/resources/ochiai/Chart_9/: ochiai.txt
tool/resources/ochiai/Cli_1/: ochiai.txt
tool/resources/ochiai/Cli_10/: ochiai.txt
tool/resources/ochiai/Cli_11/: ochiai.txt
tool/resources/ochiai/Cli_12/: ochiai.txt
tool/resources/ochiai/Cli_13/: ochiai.txt
tool/resources/ochiai/Cli_14/: ochiai.txt
tool/resources/ochiai/Cli_15/: ochiai.txt
tool/resources/ochiai/Cli_16/: ochiai.txt
tool/resources/ochiai/Cli_17/: ochiai.txt
tool/resources/ochiai/Cli_18/: ochiai.txt
tool/resources/ochiai/Cli_19/: ochiai.txt
tool/resources/ochiai/Cli_2/: ochiai.txt
tool/resources/ochiai/Cli_20/: ochiai.txt
tool/sabfl/: .gitignore  .ocamlformat  INSTALL.md  build-infer.sh  opam
tool/sabfl/infer/src/fl4apr/: FL.ml  SBFL.ml  SBFL.mli  dune
tool/sabfl/infer/src/fl4apr/basic_domain/: Constraint.ml  Fl4aprSymExecutor.ml  Heuristics.ml  SpecCheckerCore.ml  SpecCheckerDomain.ml  SpecCheckerModels.ml  SpecCheckerModels.mli  SymDom.ml  Verify.ml  basicDom.ml  context.ml  dune  dynInfo.ml
tool/sabfl/infer/src/fl4apr/bottom_up/: NullnessAnalysis.ml  SpecChecker.ml  SpecCheckerSummary.ml  SpecCheckerSummary.mli  dune
tool/sabfl/infer/src/fl4apr/fault/: dune  fault.ml  fault.mli
tool/sabfl/infer/src/fl4apr/program/: ASTExp.ml  ASTExp.mli  Fl4aprModels.ml  ProcVar.ml  WeakMap.ml  WeakMap.mli  dune  instrNode.ml  interNode.ml  junitModel.ml  junitModel.mli  profiler.ml  program.ml  program.mli  vocab.ml
tool/sabfl/infer/src/fl4apr/synthesizer/: Cache.ml  Cache.mli  Collector.ml  Collector.mli  Enumerator.ml  Enumerator.mli  Patch.ml  PatchTemplate.ml  Pipeline.ml  Rewriter.ml  Rewriter.mli  StaticFilter.ml  Synthesizer.ml  dune
tool/sabfl/infer/src/fl4apr/tDown/: absSem.ml  dune  fiptsAnalysis.ml  fiptsAnalysisDomain.ml  fiptsAnalysisModels.ml  preanalysis.ml
tool/sabfl/infer/src/integration/: BuckFlavors.ml  BuckGenrule.ml  Driver.ml  Maven.ml  dune
tool/sabfl/infer/src/opensource/: dune
tool/sabfl/scripts/: patch.py  validator.py
tool/validator/: diff.py  models.py  parallel_validator.py  utils.py  validator.py
(+5380 files in other folders)
