(* -*- tuareg -*- *)
(*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *)
(* use strings so that it looks like OCaml even before substituting, e.g. to use ocamlformat *)

let is_yes = String.equal "yes"

let is_empty = String.equal ""

let clang = is_yes "no"

let java = is_yes "yes"

let facebook = is_yes "no"

let extra_cflags = if is_empty "" then [] else [""]
(* -*- tuareg -*- *)
(*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *)
(* NOTE: prepend dune.common to this file! *)

let library =
  Format.sprintf
    {|
(library
 (name Integration)
 (public_name infer.Integration)
 (flags
  (:standard
     -open Core -open IStdlib -open IStd -open OpenSource -open ATDGenerated
     -open IBase -open IR -open Absint -open BO -open Costlib -open Concurrency -open Backend
     -open TestDeterminators -open ClangFrontend -open ASTLanguage -open JavaFrontend %s %s))
 (libraries xmlm core IStdlib ATDGenerated IBase IR Absint BO Costlib Concurrency Backend
     TestDeterminators ClangFrontend ASTLanguage JavaFrontend)
 (preprocess (pps ppx_compare))
)

(documentation (package infer) (mld_files Integration))|}
    (if clang then "" else "-open ClangFrontendStubs")
    (if java then "" else "-open JavaFrontendStubs")


;;
Jbuild_plugin.V1.send library
