(* -*- tuareg -*- *)
(*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *)
(* use strings so that it looks like OCaml even before substituting, e.g. to use ocamlformat *)

let is_yes = String.equal "yes"

let is_empty = String.equal ""

let clang = is_yes "no"

let java = is_yes "yes"

let facebook = is_yes "no"

let extra_cflags = if is_empty "" then [] else [""]
(* -*- tuareg -*- *)
(*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *)
(* NOTE: prepend dune.common to this file! *)

(* include the open-source modules only in open-source build modes, otherwise this library is empty *)

;;
Jbuild_plugin.V1.send
  (Format.sprintf {|
(library
 (name OpenSource)
 (public_name infer.OpenSource)
  %s
)
|}
     (if facebook then "(modules)" else "(modules :standard)"))
