; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name TDown)
 (public_name infer.Fl4apr.TDown)
 (flags
  (:standard -open Core -open IR -open Absint -open IStdlib -open IStd -open
    ATDGenerated -open IBase -open Iprogram -open BasicDomain -open Data
    -open Backend -open ISynthesizer))
 (libraries core IStdlib Absint ATDGenerated IBase IR ocamlgraph Iprogram
   BasicDomain Data Backend ISynthesizer)
 (preprocess
  (pps ppx_compare)))
